@@ -3,8 +3,10 @@
 //
 // Authors:
 //	Andreas Noever <andreas.noever@gmail.com>
+//	Sebastien Pouliot  <sebastien@ximian.com>
 //
 //  (C) 2008 Andreas Noever
+// Copyright (C) 2008 Novell, Inc (http://www.novell.com)
 //
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
@@ -27,6 +29,8 @@
 //
 
 using System;
+using System.Collections.ObjectModel;
+using System.Collections.Generic;
 using System.Text;
 
 using Mono.Cecil;
@@ -38,8 +42,8 @@ namespace Gendarme.Framework {
 	/// </summary>
 	/// <example>
 	/// <code>
-	/// MethodDefinition method
-	/// MethodSignature sig = new MethodSignature () { Name = "Dispose" };
+	/// MethodDefinition method = ...
+	/// MethodSignature sig = new MethodSignature ("Dispose");
 	/// if (sig.Match (method)) { 
 	///     //matches any method named "Dispose" with any (or no) return value and any number of parameters
 	/// }
@@ -51,60 +55,72 @@ namespace Gendarme.Framework {
 		/// <summary>
 		/// The name of the method to match. Ignored if null.
 		/// </summary>
-		public string Name { get; set; }
+		public string Name { get; private set; }
 
 		/// <summary>
 		/// The FullName (Namespace.Type) of the return type. Ignored if null.
 		/// </summary>
-		public string ReturnType { get; set; }
+		public string ReturnType { get; private set; }
 
 		/// <summary>
 		/// An array of FullNames (Namespace.Type) of parameter types. Ignored if null. Null entries act as wildcards.
 		/// </summary>
-		public string [] Parameters { get; set; }
+		public ReadOnlyCollection<string> Parameters { get; private set; }
 
 		/// <summary>
 		/// An attribute mask matched against the attributes of the method.
 		/// </summary>
-		public MethodAttributes Attributes { get; set; }
+		public MethodAttributes Attributes { get; private set; }
 
-		/// <summary>
-		/// Default constructor.
-		/// </summary>
+
 		public MethodSignature ()
 		{
 		}
 
-		/// <summary>
-		/// Creates a new MethodSignature from another.
-		/// </summary>
-		/// <param name="signature">The MethodSignature to copy.</param>
-		public MethodSignature (MethodSignature signature)
+		public MethodSignature (string name)
+			: this (name, null, null)
 		{
-			this.Name = signature.Name;
-			this.ReturnType = signature.ReturnType;
-			if (signature.Parameters != null)
-				this.Parameters = (string []) signature.Parameters.Clone ();
-			this.Attributes = signature.Attributes;
+		}
+
+		public MethodSignature (string name, string returnType)
+			: this (name, returnType, null)
+		{
+		}
+
+		public MethodSignature (string name, string returnType, string[] parameters)
+		{
+			Name = name;
+			ReturnType = returnType;
+			if (parameters != null)
+				Parameters = new ReadOnlyCollection<string> (new List<string> (parameters));
+		}
+
+		public MethodSignature (string name, string returnType, string [] parameters, MethodAttributes attributes)
+			: this (name, returnType, parameters)
+		{
+			Attributes = attributes;
 		}
 
 		/// <summary>
-		/// Checks a MethodDefinition.
+		/// Checks if a MethodReference match the signature.
 		/// </summary>
 		/// <param name="method">The method to check.</param>
-		/// <returns>True if the MethodDefinition matches all aspects of the MethodSignature.</returns>
-		public bool Matches (MethodDefinition method)
+		/// <returns>True if the MethodReference matches all aspects of the MethodSignature.</returns>
+		public bool Matches (MethodReference method)
 		{
+			if (method == null)
+				throw new ArgumentNullException ("method");
+
 			if (Name != null && method.Name != Name)
 				return false;
-			if ((method.Attributes & Attributes) != Attributes)
-				return false;
+
 			if (ReturnType != null && method.ReturnType.ReturnType.FullName != ReturnType)
 				return false;
+
 			if (Parameters != null) {
-				if (Parameters.Length != method.Parameters.Count)
+				if (Parameters.Count != method.Parameters.Count)
 					return false;
-				for (int i = 0; i < Parameters.Length; i++) {
+				for (int i = 0; i < Parameters.Count; i++) {
 					if (Parameters [i] == null)
 						continue;//ignore parameter
 					if (Parameters [i] != method.Parameters [i].ParameterType.FullName) {
@@ -112,28 +128,43 @@ namespace Gendarme.Framework {
 					}
 				}
 			}
-			return true;
+
+			// skip last check if no attributes are part of the signature
+			if (((int) Attributes) == 0)
+				return true;
+
+			// put this at last step so we avoid the cast as much as possible
+			MethodDefinition md = (method as MethodDefinition);
+			return ((md == null) || ((md.Attributes & Attributes) == Attributes));
 		}
 
+		/// <summary>
+		/// 
+		/// </summary>
+		/// <returns></returns>
 		public override string ToString ()
 		{
+			// if we do not have enough useful information return an empty string
+			if (Name == null)
+				return String.Empty;
+
 			StringBuilder sb = new StringBuilder ();
 			if (ReturnType != null) {
 				sb.Append (ReturnType);
 				sb.Append (' ');
 			}
-			if (Name != null) {
-				sb.Append (Name);
-				sb.Append ('(');
-				if (Parameters != null) {
-					for (int i = 0; i < Parameters.Length; i++) {
-						sb.Append (Parameters [i]);
-						if (i < Parameters.Length - 1)
-							sb.Append (',');
-					}
+
+			sb.Append (Name);
+			sb.Append ('(');
+			if (Parameters != null) {
+				for (int i = 0; i < Parameters.Count; i++) {
+					sb.Append (Parameters [i]);
+					if (i < Parameters.Count - 1)
+						sb.Append (',');
 				}
-				sb.Append (')');
 			}
+			sb.Append (')');
+
 			return sb.ToString ();
 		}
 	}
